# galactic

./: Cargo.toml  todo.md
client/: Cargo.toml
client/src/: camera.rs  constants.rs  main.rs  main_menu.rs  map.rs  movement.rs  player.rs  setup.rs  ui.rs
core/: Cargo.toml
core/src/: event.rs  game_state.rs  input.rs  lib.rs  map.rs  movement.rs  player.rs  projectile.rs  resource.rs
core/src/components/: prelude.rs
server/: Cargo.toml
server/src/: main.rs
src/: camera.rs  components.rs  constants.rs  event.rs  input.rs  main.rs  map.rs  movement.rs  network.rs  player.rs  projectile.rs  resource.rs  server.rs  spawner.rs
