[package]
name = "galactic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
bevy = {git = "https://github.com/bevyengine/bevy.git", commit = "959a845704426d2f967c3898239e552b9d6bf9c9"}

[profile.dev.package."*"]
opt-level = 3