[workspace]

members = [
    "server",
    "client",
]
resolver = "2"

default-members = ["client"]

[patch.crates-io]
# override it with bevy from git
bevy = {git = "https://github.com/bevyengine/bevy.git", commit = "a6d3cd92fe2be55032c2e63a1ed983543d28143b"}


[patch."https://github.com/bevyengine//bevy"]
bevy = {git = "https://github.com/bevyengine/bevy.git", commit = "a6d3cd92fe2be55032c2e63a1ed983543d28143b"}