[workspace]

members = [
    "server",
    "client",
]
resolver = "2"

default-members = ["client"]

[patch.crates-io]
# override it with bevy from git
bevy = {git = "https://github.com/bevyengine/bevy.git", commit = "1d0d8a3397bd6fc2c14d42ffd0668d2443748912"}


[patch."https://github.com/bevyengine//bevy"]
bevy = {git = "https://github.com/bevyengine/bevy.git", commit = "1d0d8a3397bd6fc2c14d42ffd0668d2443748912"}