[package]
name = "galactic_client"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
bevy = "0.5.0"
renet_udp = {git = "https://github.com/lucaspoffo/renet", commit = "350f82bbeae51cd07edafe82eea47deb453c14bf"}

galactic_core = {path = "../core"}

[profile.dev.package."*"]
opt-level = 3
