[package]
name = "galactic_client"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
bevy = "0.5.0"
renet_udp = {git = "https://github.com/lucaspoffo/renet", commit = "350f82bbeae51cd07edafe82eea47deb453c14bf"}
# kayak_ui = { git="https://github.com/StarArawn/kayak_ui", rev="e25baa9d0ae0cbb63c07e1f3153af2da5c69b8f4" }
kayak_ui = { path="./../../kayak_ui"}
bevy_asset_loader = {git="https://github.com/NiklasEi/bevy_asset_loader", branch="bevy_main"}

galactic_core = {path = "../core"}

[profile.dev.package."*"]
opt-level = 3


