[package]
name = "galactic_core"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
bevy = {git = "https://github.com/bevyengine/bevy.git", commit = "1d0d8a3397bd6fc2c14d42ffd0668d2443748912"}
# renet = {git = "https://github.com/lucaspoffo/renet", commit = "3fb82cb82caed7f20d741826506f362966d48baf"}
renet_udp = {git = "https://github.com/lucaspoffo/renet", commit = "350f82bbeae51cd07edafe82eea47deb453c14bf"}

[profile.dev.package."*"]
opt-level = 3