[package]
name = "galactic_core"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
bevy = "0.5.0"
# renet = {git = "https://github.com/lucaspoffo/renet", commit = "3fb82cb82caed7f20d741826506f362966d48baf"}
renet_udp = {git = "https://github.com/lucaspoffo/renet", commit = "350f82bbeae51cd07edafe82eea47deb453c14bf"}

[profile.dev.package."*"]
opt-level = 3