[package]
name = "galactic_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
bevy = {git = "https://github.com/bevyengine/bevy.git", commit = "959a845704426d2f967c3898239e552b9d6bf9c9"}
# renet = {git = "https://github.com/lucaspoffo/renet", commit = "3fb82cb82caed7f20d741826506f362966d48baf"}
renet_udp = {git = "https://github.com/lucaspoffo/renet", commit = "350f82bbeae51cd07edafe82eea47deb453c14bf"}

# serde = { version = "1.0.117", features = [ "derive" ] } 
# bincode = "1.3.1"
# log = { version = "0.4.11", features = [ "std" ] }

[profile.dev.package."*"]
opt-level = 3